keynoters fixes: - z-index (for Firefox) - same dimensions for both variants

--- a/pyconcz/static_src/scss/pyconcz19/_pc-keynoters.scss
+++ b/pyconcz/static_src/scss/pyconcz19/_pc-keynoters.scss
@@ -15,4 +15,8 @@
         font-size: $h3-font-size;
         margin-top: 0;
     }
+
+    &-photo {
+        z-index: 10;
+    }
 }
